--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Unzip project
-        run: unzip -o "DreiWeichen_v6.1.zip" -d .
+        run: unzip -o "DreiWeichen_v6_1.zip" -d .
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
